kubernetes/apps/default/tvheadend/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvheadend
  labels:
    app: tvheadend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: tvheadend
  template:
    metadata:
      labels:
        app: tvheadend
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tvheadend-config
        - name: share
          nfs:
            server: openmediavault.oyoy.lan
            path: /storage/media/recordings
        - name: dev-dvb
          hostPath:
            path: /dev/dvb
      containers:
        - name: tvheadend
          image: lscr.io/linuxserver/tvheadend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9981
              protocol: TCP
              name: webui
            - containerPort: 9982
              protocol: TCP
              name: htsp
          volumeMounts:
            - name: config
              mountPath: /config
            - name: share
              mountPath: /recordings
            - name: dev-dvb
              mountPath: /dev/dvb
          securityContext:
            privileged: true
      nodeSelector:
        feature.node.kubernetes.io/usb-ff_0572_689a.present: "true"
