kubernetes/apps/default/tvheadend/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tvheadend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: tvheadend.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvheadend
                port:
                  name: webui
  tls:
    - secretName: tvheadend-tls
      hosts:
        - tvheadend.fadhlika.com
